Created a layout for dashboard

--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,12 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css" 
+              "src/dashlite.min.css",
+              "src/dashlite.rtl.min.css",
+              "src/dashlite.rtl.css",
+              "src/dashlite.css",
+              "src/style-email.css",
+              "src/theme.css"
             ],
             "scripts": []
           },
@@ -52,7 +57,13 @@
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true
+              "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
