events get and add completed

--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,12 @@
               "src/dashlite.css",
               "src/style-email.css",
               "src/theme.css"
+              
+
             ],
-            "scripts": []
+            "scripts": [
+              
+            ]
           },
           "configurations": {
             "production": {
