--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@types/bootstrap": "^5.2.10",
     "bootstrap": "^5.3.3",
+    "jquery": "^3.7.1",
+    "ngx-bootstrap": "^19.0.2",
     "ngx-toastr": "^16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
